apps/services/portainer/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  annotations:
    gethomepage.dev/description: Kubernetes Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: portainer.png
    gethomepage.dev/name: Portainer
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: portainer.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localai
                port:
                  number: 9000
  tls:
    - hosts:
        - portainer.internal
      secretName: homepage-tls
